--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "main": "src/index.ts",
   "repository": "git@github.com:RINIYAProject/auth.riniya.uk.git",
   "author": "NebraskyTheWolf",
+  "scripts": {
+    "start": "npm run build && node build/server/index.js",
+    "dev": "npm run build && ts-node src/server/index.ts",
+    "build": "tsc",
+    "clean": "rm package-lock.json && rm -rf node_modules"
+  },
   "license": "MIT",
   "dependencies": {
     "@types/body-parser": "^1.19.2",
