--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "@tippyjs/react": "^4.2.6",
+    "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.2",
+    "@types/classnames": "^2.3.1",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
@@ -23,31 +27,29 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
     "@types/passport": "^1.0.12",
+    "@types/react-icons": "^3.0.0",
+    "@types/swiper": "^6.0.0",
+    "@types/uuid": "^9.0.1",
+    "axios": "^1.3.6",
+    "bcrypt": "^5.1.0",
+    "classnames": "^2.3.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-jwt": "^8.4.1",
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
-    "https": "^1.0.0",
-    "jsonwebtoken": "^9.0.0",
-    "nestjs": "^0.0.1",
-    "passport": "^0.6.0",
-    "typescript": "^5.0.4",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@tippyjs/react": "^4.2.6",
-    "@types/classnames": "^2.3.1",
-    "@types/react-icons": "^3.0.0",
-    "@types/swiper": "^6.0.0",
-    "axios": "^1.3.6",
-    "classnames": "^2.3.2",
     "github-markdown-css": "^5.2.0",
     "gray-matter": "^4.0.3",
+    "https": "^1.0.0",
+    "jsonwebtoken": "^9.0.0",
     "lru-cache": "^9.1.0",
+    "module-alias": "^2.2.2",
+    "nestjs": "^0.0.1",
     "next": "^13.3.1",
     "next-translate": "^2.0.5",
+    "passport": "^0.6.0",
     "postcss-scss": "^4.0.6",
     "react": "^18.2.0",
-    "module-alias": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-markdown": "^8.0.7",
@@ -59,7 +61,9 @@
     "remark-gfm": "^3.0.1",
     "sass": "^1.62.0",
     "sharp": "^0.32.0",
-    "swiper": "^9.3.2"
+    "swiper": "^9.3.2",
+    "typescript": "^5.0.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
