fix(src/): Fix Encryption comparing function.

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,7 @@ COOKIE_SESSION_SECRET=<super_secret_key>
 
 # Discord application configuration
 RINIYA_APP_IDENTIFIER=<bot-id>
+
+# Role
+
+ACT_DEFAULT_ROLE=<id>
